# silly-ai

./: .gitignore  Cargo.toml  README.md  behaviors.md  config.example.toml  install.sh  next_steps.txt
.github/workflows/: ci.yml  release.yml
.opencode/plans/: llama-metadata-auto-config.md
HomebrewFormula/: silly.rb
ai-department/: README.md  index.html  proxy.ts  team.ts
docs/: TESTING.md  UI_MODULAR_STATUS_SUMMARY.md  auto_submit_timer.md  behaviors.md
listening/: Cargo.toml  run.sh
listening/src/: main.rs
src/: aec.rs  audio.rs  capture.rs  chat.rs  command.rs  config.rs  fuzzy.rs  graphical_ui.rs  listen.rs  llm.rs  main.rs  model_manager.rs  pipeline.rs  render.rs  rephrase.rs  repl.rs  segmenter.rs  session.rs  state.rs  stats.rs  status_bar.rs  summarize.rs  supertonic.rs  test_ui.rs  transcriber.rs  tts.rs  tui.rs  ui.rs  vad.rs  wake.rs
src/typing/: commands.rs  hotkey.rs  input.rs  mod.rs  processor.rs
tests/: auto_submit_timer_test.rs
