[package]
name = "silly"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cpal = "0.17.0"
hotpath = "0.9.2"
ollama-rs = { version = "0.3.3", features = ["stream"] }
rodio = "0.21.1"
rubato = "0.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
flume = "0.11"
futures-util = "0.3"
rustyline-async = "0.4"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1.17"
transcribe-rs = { version = "0.2.1", features = ["parakeet"] }
vad-rs = { git = "https://github.com/cjpais/vad-rs", version = "0.1.5", default-features = false }

# Kokoro dependencies (optional)
kokoros = { git = "https://github.com/lucasjinreal/Kokoros", version = "0.1.0", optional = true }

# Supertonic dependencies (optional)
ndarray = { version = "0.16", features = ["rayon"], optional = true }
ort = { version = "2.0.0-rc.7", optional = true }
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }
regex = { version = "1.10", optional = true }
unicode-normalization = { version = "0.1", optional = true }

[features]
default = ["supertonic"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
kokoro = ["kokoros"]
supertonic = ["ndarray", "ort", "rand", "rand_distr", "regex", "unicode-normalization", "serde_json"]
