[package]
name = "silly"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
cpal = "0.17.0"
crossterm = "0.29"
ctrlc = "3"
hotpath = "0.9.2"
ollama-rs = { version = "0.3.3", features = ["stream"], optional = true }
rodio = "0.21.1"
rubato = "0.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
flume = "0.11"
futures-util = "0.3"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1.17"
transcribe-rs = { version = "0.2.1", features = ["parakeet"], git = "https://github.com/cjpais/transcribe-rs", branch = "main" }
vad-rs = { git = "https://github.com/cjpais/vad-rs", version = "0.1.5", default-features = false }
hf-hub = { version = "0.4", optional = true }
unicode-width = "0.2.2"
screencapturekit = { version = "1", features = ["macos_13_0"], optional = true }
lewton = { version = "0.10", optional = true }
ogg = { version = "0.9", optional = true }
vorbis_rs = { version = "0.5", optional = true }

# Kokoro dependencies (optional)
kokoros = { git = "https://github.com/lucasjinreal/Kokoros", version = "0.1.0", optional = true }

# Supertonic dependencies (optional)
ndarray = { version = "0.16", features = ["rayon"], optional = true }
ort = { version = "2.0.0-rc.10", features = ["coreml"], optional = true }
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }
regex = { version = "1.10", optional = true }
unicode-normalization = { version = "0.1", optional = true }
encoding_rs = { version = "0.8", optional = true }

# llama.cpp with Metal on macOS
[target.'cfg(target_os = "macos")'.dependencies]
llama-cpp-2 = { version = "0.1", features = ["metal"], optional = true }
kalosm-llama = { version = "0.4", features = ["metal"], optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies]
llama-cpp-2 = { version = "0.1", optional = true }
kalosm-llama = { version = "0.4", optional = true }

[features]
default = ["supertonic", "openai-compat"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
kokoro = ["kokoros"]
supertonic = ["ndarray", "ort", "rand", "rand_distr", "regex", "unicode-normalization", "serde_json"]
llama-cpp = ["llama-cpp-2", "hf-hub", "encoding_rs"]
ollama = ["ollama-rs"]
openai-compat = ["reqwest", "serde_json"]
listen = ["screencapturekit", "lewton", "ogg", "vorbis_rs"]
kalosm = ["kalosm-llama"]
aec = ["aec3"]
typing = ["enigo", "arboard", "rdev"]

[dependencies.aec3]
version = "0.1"
optional = true

[dependencies.reqwest]
version = "0.12"
features = ["blocking", "json", "stream"]
optional = true

[dependencies.enigo]
version = "0.3"
optional = true

[dependencies.arboard]
version = "3.4"
optional = true

[dependencies.rdev]
version = "0.5"
optional = true

[profile.release]
debug = true
